починил популярные товары + добавил цену со скидкой
